# simple_fast_api

./: pyproject.toml
fastapi-app/: main.py
fastapi-app/core/: config.py
